feat: update cashback calculation logic and hide days label in otpusk widget

--- a/public/otpusk-widget.html
+++ b/public/otpusk-widget.html
@@ -508,6 +508,11 @@
       color: rgba(255, 255, 255, 0.4) !important;
     }
 
+    /* Hide "(X днів)" days label everywhere in the widget */
+    body .new_f-duration-days {
+      display: none !important;
+    }
+
     /* === CLEAR FILTERS BUTTON === */
     body .new_f-ext-clear-btn {
       color: #0fa4e6 !important;
