--- a/public/otpusk-top-countries.html
+++ b/public/otpusk-top-countries.html
@@ -323,7 +323,7 @@
         if (link) {
           e.preventDefault();
           e.stopPropagation();
-          window.top.location.href = '/';
+          window.top.location.href = '/tour-screener';
         }
       }, true);
 
